--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs :
   name : return the number square 
   steps : 
     -name : Checkout 
-     uses : action/checkout@v2
+     uses : actions/checkout@v2
     -name : fetch num squared 
       id : get_square
-      uses : action/checkout@v2
+      uses : actions/checkout@v2
       with : 
         num: 11
       - name : print the square
