--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ on : [push]
 jobs : 
   get-num-square : 
   runs-on : ubuntu-latest 
-  name : return the number square 
+  name : Returns the number square 
   steps : 
     -name : Checkout 
      uses : actions/checkout@v2
-    -name : fetch num squared 
+    -name : Fetch num squared 
       id : get_square
       uses : actions/checkout@v2
       with : 
         num: 11
-      - name : print the square
+      - name : Print the square
         run : echo "${{steps.get_square.outpus.num_squared}}"
