--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs :
   steps : 
     -name : Checkout 
      uses:actions/checkout@v2
-    - name: Fetch num squared 
-      id : get_square
-      uses : actions/checkout@v2
-      with : 
-        num: 11
-      - name : Print the square
-        run : echo "${{steps.get_square.outpus.num_squared}}"
+    -name: fetch num squared 
+     id : get_square
+     uses : actions/src/
+     with : 
+      num: 11
+    -name : Print the square
+     run : echo "${{steps.get_square.outpus.num_squared}}"
