--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,18 @@
-name : Test Action 
-on : [push]
+name: Test Action 
+on:
+  push
 
-jobs : 
-  get-num-square : 
-  runs-on : ubuntu-latest 
-  name : Returns the number square 
-  steps : 
-    -name : Checkout 
-     uses:actions/checkout@v2
-     -name:fetch num squared 
-     id:get_square
-     uses:actions/src
-     with: 
-      num:11
-    -name : Print the square
-     run : echo "${{steps.get_square.outpus.num_squared}}"
+jobs:
+  get-num-square:
+    runs-on: ubuntu-latest 
+    name: Returns the number square 
+    steps:
+      - name: Checkout 
+        uses: actions/checkout@v2
+      - name: fetch num squared 
+        id: get_square
+        uses: actions/src
+        with:
+          num: 11
+      - name: Print the square
+        run: echo "${{steps.get_square.outputs.num_squared}}"
