--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - name: fetch num squared 
         id: get_square
-        uses: oss_actions/action.yml
+        uses: wldhks1959/oss_actions/action.yml
         with:
           num: 11
       - name: Print the square
