--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: Test Action 
-on:
-  push
+on:[push]
 
 jobs:
   get-num-square:
@@ -11,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: fetch num squared 
         id: get_square
-        uses: ./wldhks1959/oss_actions@main
+        uses: ./
         with:
           num: 11
       - name: Print the square
