--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Test Action 
-on: push
+on: [push]
 
 jobs:
   get-num-square:
     runs-on: ubuntu-latest 
-    name: Returns the number square 
+    name: return the number square 
     steps:
       - name: Checkout 
         uses: actions/checkout@v2
