--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: fetch num squared 
         id: get_square
-        uses: ./
+        uses: ./actions/setup-python@v4
         with:
           num: 11
       - name: Print the square
